--- a/src/com/eqsys/view/NodeEditLayout.fxml
+++ b/src/com/eqsys/view/NodeEditLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="com.eqsys.view.NodeEditController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.NodeEditController">
   <columnConstraints>
     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -32,7 +32,7 @@
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
          <children>
             <Button mnemonicParsing="false" onAction="#handleOk" text="确定" />
-            <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#handleCancel" text="取消" />
+            <Button mnemonicParsing="false" onAction="#handleCancel" text="取消" />
          </children>
       </HBox>
       <TextField fx:id="stationIdTf" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -41,5 +41,6 @@
       <TextField fx:id="altitudeTf" GridPane.columnIndex="3" GridPane.rowIndex="1" />
       <TextField fx:id="sensitivityTf" GridPane.columnIndex="3" GridPane.rowIndex="2" />
       <TextField fx:id="triggerThresholdTf" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+      <Label fx:id="errorLab" text="" textFill="#ff0606" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="4" />
    </children>
 </GridPane>
