--- a/src/com/eqsys/view/MainPaneLayout.fxml
+++ b/src/com/eqsys/view/MainPaneLayout.fxml
@@ -27,6 +27,7 @@
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints />
@@ -44,7 +45,7 @@
    <children>
       <AnchorPane GridPane.columnSpan="11">
          <children>
-            <HBox layoutY="20.0" prefHeight="0.0" prefWidth="670.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="121.0" AnchorPane.topAnchor="5.0">
+            <HBox prefHeight="0.0" prefWidth="670.0">
                <children>
                   <MenuBar nodeOrientation="RIGHT_TO_LEFT" opacity="0.87">
                      <cursor>
@@ -81,8 +82,7 @@
                   </MenuBar>
                </children>
             </HBox>
-         </children>
-      </AnchorPane>
+         </children></AnchorPane>
       <VBox prefHeight="349.0" prefWidth="146.0" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3">
          <children>
             <Label prefHeight="29.0" prefWidth="146.0" text="节点布局信息" />
@@ -90,8 +90,7 @@
             <TreeView fx:id="treeView" editable="true" />
          </children>
       </VBox>
-      <Pagination prefHeight="266.0" prefWidth="398.0" GridPane.columnIndex="3" GridPane.columnSpan="5" GridPane.rowIndex="2" GridPane.rowSpan="3" />
-      <VBox prefHeight="239.0" prefWidth="791.0" GridPane.columnIndex="8" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3">
+      <VBox prefHeight="239.0" prefWidth="791.0" GridPane.columnIndex="3" GridPane.columnSpan="6" GridPane.rowIndex="5" GridPane.rowSpan="3">
          <children>
             <Label prefHeight="22.0" prefWidth="724.0" text="接受数据信息" />
             <TableView fx:id="recvInfoTable">
@@ -103,9 +102,9 @@
             </TableView>
          </children>
       </VBox>
-      <VBox prefHeight="331.0" prefWidth="247.0" GridPane.columnIndex="3" GridPane.columnSpan="5" GridPane.rowIndex="5" GridPane.rowSpan="3">
+      <VBox GridPane.columnIndex="9" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3">
          <children>
-            <Label prefHeight="21.0" prefWidth="231.0" text="客户端信息" />
+            <Label prefHeight="21.0" prefWidth="231.0" text="已连接客户端" />
             <TableView fx:id="clientTable">
                <columns>
                   <TableColumn fx:id="stationId" prefWidth="60.0" text="站台ID" />
@@ -128,7 +127,7 @@
             </TableView>
          </children>
       </VBox>
-      <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="8" GridPane.columnSpan="3" GridPane.rowIndex="5" GridPane.rowSpan="3">
+      <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="9" GridPane.columnSpan="3" GridPane.rowIndex="5" GridPane.rowSpan="3">
          <children>
             <Label text="系统事件" />
             <TableView fx:id="eventTable">
@@ -148,5 +147,57 @@
             <Button mnemonicParsing="false" text="功能四" />
          </children>
       </HBox>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="6" GridPane.rowIndex="2" GridPane.rowSpan="3">
+         <children>
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="20.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="台网服务器信息" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
+                  <Label text="台网名称：" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                  <Label text="IP：" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <Label fx:id="serverId" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="serverIp" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <GridPane layoutX="300.0" layoutY="-14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+               <children>
+                  <Label text="数据库信息" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
+                  <Label text="服务器名称：" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                  <Label text="数据库类型：" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <Label fx:id="dbName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="dbType" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="连接状态：" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                  <Label fx:id="dbState" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               </children>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+            </GridPane>
+         </children>
+      </AnchorPane>
    </children>
 </GridPane>
