--- a/src/com/eqsys/view/MainPaneLayout.fxml
+++ b/src/com/eqsys/view/MainPaneLayout.fxml
@@ -149,10 +149,10 @@
       </HBox>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="6" GridPane.rowIndex="2" GridPane.rowSpan="3">
          <children>
-            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="20.0">
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="50.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="63.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" prefWidth="137.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -165,26 +165,32 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="台网服务器信息" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
-                  <Label text="台网名称：" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                  <Label text="IP：" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <Label text="台网服务器信息" GridPane.columnSpan="2" GridPane.halignment="LEFT">
+                     <font>
+                        <Font size="20.0" />
+                     </font></Label>
+                  <Label text="台网名称：" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+                  <Label text="IP：" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
                   <Label fx:id="serverId" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Label fx:id="serverIp" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane layoutX="300.0" layoutY="-14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+            <GridPane layoutX="300.0" layoutY="-14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <Label text="数据库信息" GridPane.columnSpan="2" GridPane.halignment="CENTER" />
-                  <Label text="服务器名称：" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                  <Label text="数据库类型：" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                  <Label text="数据库信息" GridPane.columnSpan="2" GridPane.halignment="LEFT">
+                     <font>
+                        <Font size="20.0" />
+                     </font></Label>
+                  <Label text="服务器名称：" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+                  <Label text="数据库类型：" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
                   <Label fx:id="dbName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Label fx:id="dbType" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Label text="连接状态：" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+                  <Label text="连接状态：" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
                   <Label fx:id="dbState" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="73.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.0" minWidth="10.0" prefWidth="127.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
