--- a/src/com/eqsys/view/MainPaneLayout.fxml
+++ b/src/com/eqsys/view/MainPaneLayout.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.StackPane?>
 
-<GridPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.MainPaneController">
+<GridPane stylesheets="@mainpanetheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.eqsys.view.MainPaneController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -33,9 +33,9 @@
       <ColumnConstraints />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="25.0" minHeight="20.0" prefHeight="25.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="45.0" minHeight="0.0" prefHeight="45.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -81,9 +81,9 @@
             </Tab>
         </tabs>
       </TabPane>
-      <TabPane fx:id="mainTabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="3" GridPane.columnSpan="6" GridPane.rowIndex="2" GridPane.rowSpan="3">
+      <TabPane fx:id="mainTabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="ALL_TABS" GridPane.columnIndex="3" GridPane.columnSpan="6" GridPane.rowIndex="2" GridPane.rowSpan="3">
         <tabs>
-          <Tab closable="false" text="主页">
+          <Tab closable="false" text="    主页    ">
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
@@ -147,54 +147,53 @@
                   </AnchorPane>
                </content>
             </Tab>
+            <Tab text="其他功能">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="111111">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
         </tabs>
-         <contextMenu>
-            <ContextMenu>
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#handleCloseTab" text="关闭" />
-              </items>
-            </ContextMenu>
-         </contextMenu>
       </TabPane>
-      <AnchorPane GridPane.columnSpan="11">
+      <AnchorPane styleClass="menu-bar" GridPane.columnSpan="12">
          <children>
-            <HBox prefHeight="0.0" prefWidth="670.0">
-               <children>
-                  <MenuBar nodeOrientation="RIGHT_TO_LEFT" opacity="0.87">
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <menus>
-                        <Menu mnemonicParsing="false" text="日志管理" />
-                        <Menu mnemonicParsing="false" text="数据库管理">
-                           <items>
-                              <MenuItem mnemonicParsing="false" onAction="#handleConnectDb" text="连接数据库" />
-                              <MenuItem mnemonicParsing="false" onAction="#handleDbSetting" text="数据库设置" />
-                           </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="数据分析">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Delete" />
-                           </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="运行管理">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="About" />
-                           </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="系统管理">
-                           <items>
-                              <MenuItem mnemonicParsing="false" onAction="#handleNodeMgr" text="节点管理" />
-                              <MenuItem mnemonicParsing="false" text="退出" />
-                           </items>
-                        </Menu>
-                     </menus>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                  </MenuBar>
-               </children>
-            </HBox>
+            <MenuBar nodeOrientation="RIGHT_TO_LEFT">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+               <menus>
+                  <Menu mnemonicParsing="false" text="日志管理" />
+                  <Menu mnemonicParsing="false" text="数据库管理">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handleConnectDb" text="连接数据库" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleDbSetting" text="数据库设置" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="数据分析">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Delete" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="运行管理">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="About" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="系统管理">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handleNodeMgr" text="节点管理" />
+                        <MenuItem mnemonicParsing="false" text="退出" />
+                     </items>
+                  </Menu>
+               </menus>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </MenuBar>
          </children></AnchorPane>
       <VBox prefHeight="349.0" prefWidth="146.0" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3">
          <children>
@@ -203,13 +202,17 @@
             <TreeView fx:id="treeView" editable="true" />
          </children>
       </VBox>
-      <HBox GridPane.columnSpan="11" GridPane.rowIndex="1">
+      <HBox id="shortkeybg" alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="1098.0" GridPane.columnSpan="12" GridPane.rowIndex="1">
          <children>
-            <Button mnemonicParsing="false" text="功能一" />
-            <Button mnemonicParsing="false" text="功能二" />
-            <Button mnemonicParsing="false" text="功能三" />
-            <Button mnemonicParsing="false" text="功能四" />
+            <Button id="shortkey1" fx:id="connDbBtn" mnemonicParsing="false" onAction="#handleConnectDb" prefHeight="40.0" prefWidth="40.0">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin></Button>
+            <Button id="shortkey2" fx:id="nodeMgrBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#handleNodeMgr" prefHeight="40.0" prefWidth="40.0" textAlignment="CENTER" />
          </children>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
       </HBox>
       <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="9" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3">
         <tabs>
@@ -219,10 +222,10 @@
                      <children>
                         <TableView fx:id="clientTable" prefHeight="51.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <columns>
-                              <TableColumn fx:id="stationId" prefWidth="60.0" text="站台ID" />
-                              <TableColumn fx:id="transMode" prefWidth="65.0" text="传输模式" />
-                              <TableColumn fx:id="sensitivity" prefWidth="65.0" text="灵敏度" />
-                              <TableColumn fx:id="triggerThreshold" prefWidth="60.0" text="触发阈值" />
+                              <TableColumn fx:id="stationId" prefWidth="90.0" text="站台ID" />
+                              <TableColumn fx:id="transMode" prefWidth="95.0" text="传输模式" />
+                              <TableColumn fx:id="sensitivity" prefWidth="65.0" text="灵敏度" visible="false" />
+                              <TableColumn fx:id="triggerThreshold" prefWidth="100.0" text="触发阈值" />
                            </columns>
                         </TableView>
                      </children>
@@ -239,8 +242,8 @@
                      <children>
                         <TableView fx:id="eventTable" prefHeight="400.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columns>
-                            <TableColumn fx:id="stimeColumn" prefWidth="75.0" text="时间" />
-                            <TableColumn fx:id="ssrcColumn" prefWidth="75.0" text="来源" />
+                            <TableColumn fx:id="stimeColumn" prefWidth="140.0" text="时间" />
+                            <TableColumn fx:id="ssrcColumn" prefWidth="90.0" text="来源" />
                               <TableColumn fx:id="eventColumn" prefWidth="75.0" text="事件" />
                           </columns>
                         </TableView>
