--- a/src/com/eqsys/view/mainpanetheme.css
+++ b/src/com/eqsys/view/mainpanetheme.css
@@ -22,6 +22,11 @@
     -fx-text-fill: white;
     -fx-opacity: 1;
 }
+
+.text-field {
+    -fx-font-size: 12pt;
+    -fx-font-family: "Segoe UI Semibold";
+}
 /*
 .table-view {
     -fx-base: #1d1d1d;
@@ -69,7 +74,7 @@
  ******************************************************************************/
 /** 菜单栏背景色 */
 .menu-bar {
-    -fx-background-color: #3e9eff;
+    -fx-background-color: linear-gradient(from 0px 0px to 0px 20px, #CEE5F7, derive(#3190F5, 10%));
 }
 /** 下拉菜单背景色 */
 .context-menu {
@@ -108,23 +113,14 @@
 
 
 
-.text-field {
-    -fx-font-size: 12pt;
-    -fx-font-family: "Segoe UI Semibold";
-}
 
 
 /*******************************************************************************
  *                                                                             *
- * TabPane                                                                     *
+ * 主工作区                                                                     												   *
  *                                                                             *
  ******************************************************************************/
- 
-/** tab 文本  */
-.tab-pane > .tab-header-area > .headers-region > .tab > .tab-container > .tab-label {
-    -fx-alignment: CENTER;
-    -fx-text-fill: -fx-text-base-color;
-}
+
 /** tab 的方框形状 */
 .tab-pane > .tab-header-area > .headers-region > .tab {
     -fx-background-insets: 0 1 1 0, 1 2 1 1, 2 3 1 2;
@@ -136,47 +132,26 @@
 /** 顶部tab,未选中时的颜色 */
 .tab-pane > .tab-header-area > .headers-region > .tab:top {
     /*-fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color;*/
-    -fx-background-color: #66b3ff;
-}
-/** 右部tab,未选中时的颜色 */
-.tab-pane > .tab-header-area > .headers-region > .tab:right {
-  /*  -fx-background-color: -fx-outer-border, -fx-inner-border-bottomup, -fx-body-color-bottomup;*/
-    -fx-background-color: #0080ff;
-}
-/** 底部tab,未选中时的颜色 */
-.tab-pane > .tab-header-area > .headers-region > .tab:bottom {
-   /* -fx-background-color: -fx-outer-border, -fx-inner-border-bottomup, -fx-body-color-bottomup;*/
-    -fx-background-color: #1d1d1d;
-}
-/** 左部tab,未选中时的颜色 */
-.tab-pane > .tab-header-area > .headers-region > .tab:left {
-   /* -fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color; */
-    -fx-background-color: #1d1d1d;
-}
-/** 鼠标在tab上面时*/
-.tab-pane > .tab-header-area > .headers-region > .tab:hover {
-    -fx-color: -fx-hover-base;
+    -fx-background-color: derive(#3e9eff, 60%);/*derive(#66b3ff, 60%);*/
 }
 /** 当前被选中tab的颜色 */
 .tab-pane > .tab-header-area > .headers-region > .tab:selected {
     /*-fx-background-color: -fx-outer-border, -fx-inner-border, -fx-background;*/
-    -fx-background-color: #e8ffff;
+    -fx-background-color: #FFFFFF;
     -fx-background-insets: 0 1 1 0, 1 2 0 1, 2 3 0 2;
 }
 /** 选中tab 后的边框颜色 */
 .tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
     -fx-border-width: 1, 1;
     /*-fx-border-color: -fx-focus-color, -fx-faint-focus-color;*/
-    -fx-border-color: #e8ffff;
+    -fx-border-color: #FFFFFF;
     -fx-border-insets: -4 -4 -6 -5, -2 -2 -5 -3;
     -fx-border-radius: 2, 1; /* looks sharper if outer border has a tighter radius (2 instead of 3) */
 }
 .tab-pane:focused > .tab-header-area > .headers-region > .tab:bottom:selected .focus-indicator {
     -fx-border-insets: -6 -5 -4 -4, -5 -3 -2 -2;
 }
-.tab-pane > .tab-header-area > .headers-region > .tab:disabled:hover {
-    -fx-color: -fx-base;
-}
+
 /** 导航条背景色 */
 .tab-pane > .tab-header-area > .tab-header-background {
     /* TODO should not be using text-box-border I think? */
@@ -187,7 +162,7 @@
    */
      -fx-background-radius: 3 3 0 0, 0 0 0 0, 0 0 0 0;
     -fx-background-color:  
-        linear-gradient(from 0px 0px to 0px 5px, #66b3ff, derive(#66b3ff, 30%));
+        linear-gradient(from 0px 0px to 0px 5px, #CEE5F7, derive(#3e9eff, 30%));
 }
 /** 导航条背景 */
 .tab-pane:top > .tab-header-area > .tab-header-background {
@@ -199,7 +174,76 @@
     /*-fx-padding: 0.416667em 5 0.0em 0.416667em;  5 2 0 5 */
     -fx-padding: 0.416em 5 0em 0.4em; /* 5 2 0 5 */
 }
+/*******************************************************************************
+ *                                                                             *
+ * 数据表格TabPane                                                                     *
+ *                                                                             *
+ ******************************************************************************/
+ 
+/** tab 文本  */
+.datatab > .tab-header-area > .headers-region > .tab > .tab-container > .tab-label {
+    -fx-alignment: CENTER;
+    -fx-text-fill: -fx-text-base-color;
+}
+/** tab 的方框形状 */
+.datatab > .tab-header-area > .headers-region > .tab {
+    -fx-background-insets: 0 1 1 0, 1 2 1 1, 2 3 1 2;
+   /* -fx-background-radius: 3 3 0 0, 2 2 0 0, 1 1 0 0;*/
+    -fx-background-radius: 3 3 0 0, 0 0 0 0, 0 0 0 0;
+    -fx-padding: 0.083333em 0.5em 0.0769em 0.5em; /* 1 6 0.99 6 */
+}
 
+/** 顶部tab,未选中时的颜色 */
+.datatab > .tab-header-area > .headers-region > .tab:top {
+    /*-fx-background-color: -fx-outer-border, -fx-inner-border, -fx-body-color;*/
+    -fx-background-color: #AFD6F7;/*derive(#66b3ff, 60%);*/
+}
+/** 鼠标在tab上面时*/
+.datatab > .tab-header-area > .headers-region > .tab:hover {
+    -fx-color: -fx-hover-base;
+}
+/** 当前被选中tab的颜色 */
+.datatab > .tab-header-area > .headers-region > .tab:selected {
+    /*-fx-background-color: -fx-outer-border, -fx-inner-border, -fx-background;*/
+    -fx-background-color: #7EB9F2;
+    -fx-background-insets: 0 1 1 0, 1 2 0 1, 2 3 0 2;
+}
+/** 选中tab 后的边框颜色 */
+.datatab:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
+    -fx-border-width: 1, 1;
+    /*-fx-border-color: -fx-focus-color, -fx-faint-focus-color;*/
+    -fx-border-color: #7EB9F2;
+    -fx-border-insets: -4 -4 -6 -5, -2 -2 -5 -3;
+    -fx-border-radius: 2, 1; /* looks sharper if outer border has a tighter radius (2 instead of 3) */
+}
+.datatab:focused > .tab-header-area > .headers-region > .tab:bottom:selected .focus-indicator {
+    -fx-border-insets: -6 -5 -4 -4, -5 -3 -2 -2;
+}
+
+/** 导航条背景色 */
+.datatab > .tab-header-area > .tab-header-background {
+    /* TODO should not be using text-box-border I think? */
+  /*  -fx-background-color:  
+        -fx-outer-border,
+        -fx-text-box-border, 
+        linear-gradient(from 0px 0px to 0px 5px, -fx-text-box-border, derive(-fx-text-box-border, 30%));
+   */
+     -fx-background-radius: 3 3 0 0, 0 0 0 0, 0 0 0 0;
+    -fx-background-color:  
+        linear-gradient(from 0px 0px to 0px 5px, #CEE5F7, derive(#CEE5F7, 30%));
+}
+/** 导航条背景 */
+.datatab:top > .tab-header-area > .tab-header-background {
+    -fx-background-insets: 0 5 0 0/*0, 0 0 1 0, 1;*/
+}
+/** 导航条大小  */
+.datatab:top > .tab-header-area {
+    /*-fx-padding: 0.416667em 0.166667em 0.0em 0.416667em; *//* 5 2 0 5 */
+    /*-fx-padding: 0.416667em 5 0.0em 0.416667em;  5 2 0 5 */
+    -fx-padding: 0.416em 5 0em 0.4em; /* 5 2 0 5 */
+}
+
+ 
 /*******************************************************************************
  *                                                                             *
  * 快捷键                                                                     												   *
